# TreePress

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
src/: Bipartition.cpp  Bipartition.hpp  BipartitionList.cpp  BipartitionList.hpp  BipartitionProfile.cpp  BipartitionProfile.hpp  BitSet.cpp  BitSet.hpp  TAGS  Tree.cpp  Tree.hpp  TreeElem.cpp  TreeElem.hpp  TreeReader.cpp  TreeReader.hpp  global.cpp  global.hpp  main.cpp  raxmlLegacy.cpp  raxmlLegacy.hpp
system/: Makefile.build  Makefile.depend  Makefile.standard
